--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -134,8 +134,8 @@
                 <label for="model-select">Select AI Model</label>
                 <select id="model-select" class="settings-input">
                     <option value="gemini-2.5-flash-lite">Fast</option>
-                    <option value="gemini-2.5-flash">Balanced</option>
-                    <option value="gemini-2.5-pro" selected>Accurate</option>
+                    <option value="gemini-2.5-flash" selected>Balanced</option>
+                    <option value="gemini-2.5-pro">Accurate</option>
                 </select>
             </div>
             <div class="settings-group">
