--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -186,7 +186,7 @@
         let stepHistory = [];
         let planMap = new Map();
         let activeAnimations = [];
-        let temperature = 0.4, geminiModel = 'gemini-2.5-pro', sphereScale = 1.0;
+        let temperature = 0.5, geminiModel = 'gemini-2.5-flash', sphereScale = 1.0;
         const objectGroup = new THREE.Group();
         const damageSpheres = [];
         const partMeshesMap = new Map();
