--- a/plan-actions_new.html
+++ b/plan-actions_new.html
@@ -246,7 +246,7 @@
         const missingPartMaterial = new THREE.MeshStandardMaterial({ color: 0xffff00, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const selectionPartMaterial = new THREE.MeshStandardMaterial({ color: 0x0000ff, transparent: true, opacity: 0.7, side: THREE.DoubleSide });
         const newMaterial = new THREE.MeshStandardMaterial({ color: 0xf600f6, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
-        const discardedMaterial = new THREE.MeshStandardMaterial({ color: 0xff8000, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
+        const discardedMaterial = new THREE.MeshStandardMaterial({ color: 0xfdda0d, transparent: true, opacity: 0.3, side: THREE.DoubleSide });
         const outlineMaterial = new THREE.LineBasicMaterial({ color: 0x000000, transparent: true, opacity: 0.8});
         const defaultDotMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
         const selectedDotMaterial = new THREE.MeshBasicMaterial({ color: 0x6f0000 });
