--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                 <li><a href="generate-assembly_new.html" target="_blank" rel="noopener noreferrer"><span>🧱</span> Generate Assembly</a></li>
                 <li><a href="catalog-damages_new.html" target="_blank" rel="noopener noreferrer"><span>📍</span> Catalog Damages</a></li>
                 <li><a href="plan-actions_new.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
-                <li><a href="guide-repair.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
-                <li><a href="view-history.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
+                <li><a href="guide-repair_new.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
+                <li><a href="view-history_new.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
             </ul>
         </nav>
 
