--- a/index.html
+++ b/index.html
@@ -98,6 +98,14 @@
             background-color: #555;
             color: #fff;
         }
+        /* Style for the new examples button */
+        .workflow-nav li a.btn-examples {
+            background-color: #f0f0f0;
+            color: #000;
+        }
+        .workflow-nav li a.btn-examples:hover {
+            background-color: #ddd;
+        }
     </style>
 </head>
 <body>
@@ -116,6 +124,8 @@
                 <li><a href="plan-actions_new.html" target="_blank" rel="noopener noreferrer"><span>📝</span> Plan Actions</a></li>
                 <li><a href="guide-repair_new.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
                 <li><a href="view-history_new.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
+                <!-- New Button Added Below -->
+                <li><a href="examples.html" target="_blank" rel="noopener noreferrer" class="btn-examples"><span>🧠</span> Examples</a></li>
             </ul>
         </nav>
 
