--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <li><a href="guide-repair_new.html" target="_blank" rel="noopener noreferrer"><span>🛠️</span> Guide Repair</a></li>
                 <li><a href="view-history_new.html" target="_blank" rel="noopener noreferrer"><span>📂</span> View History</a></li>
                 <!-- New Button Added Below -->
-                <li><a href="examples.html" target="_blank" rel="noopener noreferrer" class="btn-examples"><span>🧠</span> Examples</a></li>
+                <li><a href="examples.html" target="_blank" rel="noopener noreferrer" class="btn-examples"><span>🍓</span> Examples</a></li>
             </ul>
         </nav>
 
